--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,8 @@ paginate: 3
 
 excerpt_separator: <!--more-->
 highlighter: pygments
-markdown: redcarpet
+#markdown: redcarpet
+markdown: kramdown
 redcarpet:
   extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
 
