remove pygments, ghpages warns about it

--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,8 @@ permalink: /:year/:month/:title
 paginate: 3
 
 excerpt_separator: <!--more-->
-highlighter: pygments
+#highlighter: pygments
+highlighter: rouge
 #markdown: redcarpet
 markdown: kramdown
 redcarpet:
